5.12/ai-management/ai-studio/overview.mdx
---
title: "Tyk AI Studio"
description: "AI Management for Platform Teams with Tyk AI Studio, a comprehensive platform for managing and deploying AI LLMs and chats"
keywords: "AI Management, Platform Teams, Tyk AI Studio"
sidebarTitle: "Overview"
canonical: "https://tyk.io/docs/ai-management/ai-studio/overview"
noindex: true
robots: "noindex, follow"
---

import AIStudioCards from '/snippets/5.12/AIStudioCards.mdx';
import { ButtonLeft } from '/snippets/5.12/ButtonLeft.mdx';

Tyk AI Studio is a comprehensive platform that enables platform teams to manage and deploy AI applications with enterprise-grade governance, security, and control.

## Key Features

<AIStudioCards/>

Tyk AI Studio enables platform teams to:
- Centralise access credentials to AI vendors, including commercial and in-house offerings
- Log and measure AI usage across the organization
- Build and release Chatbots for internal collaboration
- Ingest data into a knowledge corpus with siloed access settings
- Create AI functions as a service for common automations
- Script complex multi-modal assistants that intelligently select which AI vendor, model, and data set to use
- Implement role-based access control to democratise LLM access while maintaining security


## Licensing and Editions

Tyk AI Studio is available in two editions: **Community Edition** (open source) and **Enterprise Edition**.

### Community Edition
The Community Edition is free and open source.

**How to get it:**
No license is required. You can get started immediately using Docker Compose:
```bash
git clone https://github.com/TykTechnologies/ai-studio.git
cd ai-studio/quickstart
docker compose -f ./ce/compose.yaml up -d
```

### Enterprise Edition
The Enterprise Edition includes advanced features designed for production deployments. It is ideal for organizations requiring cost control, governance, compliance, and enterprise SSO integration.

**How to get it:**
A valid license key is required. 

Contact support@tyk.io or your account manager to request an AI Studio Enterprise license. Once you have a license, refer our [Installation Guide](/5.12/ai-management/ai-studio/installation/overview) for instructions on how to install and configure the Enterprise Edition.

### Feature Comparison

The following table compares the features available in the Community and Enterprise editions of Tyk AI Studio:

| Feature | Community Edition | Enterprise Edition |
|---------|------------------|-------------------|
| **LLM Proxy Gateway** | ✅ | ✅ |
| **Chat Interface** | ✅ | ✅ |
| **Tool Integration** | ✅ | ✅ |
| **User Management & RBAC** | ✅ | ✅ |
| **Hub-and-Spoke Deployment** | ✅ | ✅ |
| **Cost Tracking & Analytics** | ✅ | ✅ |
| **Plugin System** ([Learn more](/5.12/ai-management/ai-studio/plugins/overview)) | ✅ | ✅ |
| **Budget Management** | ❌ | ✅ |
| **Budget Enforcement** | ❌ | ✅ |
| **Budget Alerts** | ❌ | ✅ |
| **Advanced SSO (SAML, OIDC)** | ❌ | ✅ |
| **Advanced RBAC** | ❌ | ✅ |
| **Audit Logging** | ❌ | ✅ |
| **Priority Support** | ❌ | ✅ |

## Enterprise AI Challenges

Organizations implementing AI face several key challenges:

* **Shadow AI**: Unauthorized tools running without governance or oversight
* **Data privacy and compliance**: Meeting regulatory requirements while enabling innovation
* **Security and access control**: Implementing proper authentication and authorization
* **Cost management**: Controlling expenses from unmonitored AI usage

## Integrate AI with Confidence

Tyk AI Studio helps organizations harness AI's potential while ensuring proper governance, security, compliance, and control. Purpose-built for enterprises, this AI gateway and management solution enables seamless governance that overcomes the risks and challenges of AI adoption.

<iframe width="560" height="315" src="https://www.youtube.com/embed/J2BY7NYRk7U" title="Tyk AI Studio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>

## Solution Components

Tyk AI Studio provides a comprehensive suite of capabilities to manage, govern, and interact with AI across your organization:

### Centralized AI management

Unify and control AI usage across your organization:
- Govern AI with role-based access control, rate limiting and audit logging
- Monitor usage, costs, budgets, and performance in real time
- Manage how LLMs are accessed and used, with an AI gateway as a single point of control
- Ensure compliance with global privacy regulations through customizable data flow management

### AI Gateway

Seamlessly connect to AI tools and models:
- Proxy to large language models (LLMs) and integrate custom data models and tools
- Use the [AI Gateway](/5.12/ai-management/ai-studio/proxy) to enable secure, scalable access to AI services across teams
- Track usage statistics, cost breakdowns, and tool utilization to optimize resources

### AI Portal

Empower developers with a curated AI service catalog:
- Simplify access to AI tools and services through a unified portal
- Enable seamless integration with internal systems and external workflows
- Accelerate innovation by providing developers with the tools they need to build faster

### AI Chat

Bring AI-powered collaboration to every user:
- Deliver intuitive chat interfaces for direct interaction with AI tools and data sources
- Enable teams to access AI-driven insights through a unified, secure chat experience
- Foster collaboration and innovation across your organization
## Benefits

Tyk AI Studio empowers organizations to adopt AI securely and efficiently, delivering:

- **Centralized governance and control:** Consistency at the core of your business for enhanced security, compliance, troubleshooting and auditing
- **Strengthened security:** Peace of mind from strict access controls, secure interactions and region-specific compliance
- **Simplified workflows:** Reduced complexity and enhanced efficiency supporting developers and less technical users to work with multiple LLMs and tools
- **Trusted data privacy:** Rigorous compliance with data protection standards, reducing risk of reputational, operational and financial damage
- **Seamless integration:** Enhanced workflows in customer support, development, and marketing with trusted AI tools
- **Cost optimization:** Control over expenses and accountability, enabling smarter budgets

## Use Cases

Proxying LLM traffic through the AI Gateway delivers control, visibility, and scalability across various scenarios:

- **Interact with your APIs:** Connect your API management to enable API interaction for wider teams
- **Banking and financial services:** Ensure only anonymized customer data is sent to LLMs, tracking usage by department to manage costs
- **Software development:** Leverage AI for code suggestions and issue tracking in Jira
- **Data governance:** Audit and secure AI interactions to meet regulatory standards
- **Healthcare:** Route LLM traffic through an AI gateway to comply with HIPAA, protecting patient data while enabling AI-driven insights
- **E-commerce:** Integrate LLMs with product catalogs, allowing employees to query inventory or sales data through a chat interface

## MCP servers in AI Studio

AI Studio provides comprehensive [MCP (Model Context Protocol) capabilities](/5.12/ai-management/mcps/overview#mcp-for-enterprise-use) including:

- **Remote MCP catalogues and server support** – Expose internal APIs and tools to AI assistants securely without requiring local installations
- **Secure local MCP server deployment** – Deploy MCP servers within controlled environments, integrated with Tyk AI Gateway for monitoring and governance  
- **Ready-to-use MCP integrations** – Including API to MCP conversion, Dashboard API access, and searchable documentation access

For more details about Model Context Protocol (MCP) integration, please visit the [Tyk MCPs overview](/5.12/ai-management/mcps/overview) page.

<br />
<ButtonLeft href="https://tyk.io/ai-demo" color="green" content="Request a demo" />


